# CSC340ProgrammingMethodology

./: README.md
HW3/: .travis.yml  CMakeLists.txt  README.md  main.cpp
HW3/hw3_tests/: CMakeLists.txt
HW3/hw3_tests/basic_tests/: CMakeLists.txt  basic_check.cpp
HW3/hw3_tests/main_tests/: CMakeLists.txt  main_check.cpp
HW3/src/: CMakeLists.txt  triangle.cpp  triangle.h  triangle_interface.h
HW4/: .travis.yml  CMakeLists.txt  README.md  main.cpp
HW4/hw4_tests/: CMakeLists.txt
HW4/hw4_tests/basic_tests/: CMakeLists.txt
HW4/hw4_tests/main_tests/: CMakeLists.txt  main_check.cpp
HW4/src/: CMakeLists.txt  Node.h  SortedDoublyLinkedList.h
HW5/: .travis.yml  CMakeLists.txt  README.md  main.cpp
HW5/hw5_tests/: CMakeLists.txt
HW5/hw5_tests/basic_tests/: CMakeLists.txt  basic_check.cpp
HW5/hw5_tests/main_tests/: CMakeLists.txt  main_check.cpp
HW5/src/: CMakeLists.txt  DLinkedStack.h  Node.h  StackInterface.h
HW6/: .travis.yml  CMakeLists.txt  README.md  main.cpp
HW6/SDL/: CMakeLists.txt  main.cpp
HW6/SDL/SDL2/: CMakeLists.txt  SDL2.spec  VisualC.html  configure  configure.in
HW6/SDL/SDL2/test/: testgl2.c  (+63 more)
HW6/hw6_tests/: CMakeLists.txt
HW6/src/: CMakeLists.txt  Circle.h  CustomException.h  Point2D.h  Rectangle.h  Shape.h  Square.h
HW7/: .travis.yml  CMakeLists.txt  README.md  main.cpp
HW7/hw7_tests/: CMakeLists.txt
HW7/src/: CMakeLists.txt  Matrix.h  temp.cpp
HW8/: .travis.yml  CMakeLists.txt  README.md  main.cpp
HW8/hw8_tests/: CMakeLists.txt
HW8/src/: CMakeLists.txt  DictionaryInterface.h  Entry.h  HashedDictionary.h  HashedEntry.h
(+23 files in other folders)
